Put Klaus and Peter C in 'previous authors' list
git-svn-id: https://svn.mccode.org/svn/McStasTeX@156 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/abstractpage.tex
+++ b/trunk/abstractpage.tex
@@ -19,14 +19,18 @@ Materials Research Department, Ris{\o} National Laboratory, Roskilde, Denmark
 Emmanuel Farhi \verb+<farhi@ill.fr>+ \\
 Institut Laue-Langevin, Grenoble, France 
 
-Klaus Lieutenant \verb+<lieutena@ill.fr>+ \\
-Institut Laue-Langevin, Grenoble, France 
 \end{quote}
 as well as authors who left the project:
 \begin{quote}
-Kristian Nielsen \verb+<kn@sifira.dk>+ \\
-Materials Research Department, Ris{\o} National Laboratory, Roskilde, Denmark 
-Present address: Sifira A/S, Copenhagen, Denmark, 
+Peter Christiansen \verb+<pchristi@hep.lu.se>+\\
+Materials Research Department, Ris{\o} National Laboratory, Roskilde, Denmark\\
+Present address: University of Lund, Lund, Sweden\\
+Klaus Lieutenant \verb+<Klaus.Lieutenant@ife.no>+ \\
+Institut Laue-Langevin, Grenoble, France \\
+Present address: Institute for Energy Technology, Kjeller, Norway \\
+Kristian Nielsen \verb+<kristian-nielsen@mail.tele.dk>+ \\
+Materials Research Department, Ris{\o} National Laboratory, Roskilde, Denmark\\
+Presently associated with: MySQL AB, Sweden
 \end{quote}
 %Front page illustration:\\[\baselineskip]
 %Simulated scattering from a vanadium sample
