Updating release numbers and author infos.
git-svn-id: https://svn.mccode.org/svn/McStasTeX@157 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/Component_manual.tex
+++ b/trunk/Component_manual.tex
@@ -44,8 +44,8 @@
 \renewcommand{\footrulewidth}{0pt}}
 
 \newcommand{\MCS}{{McStas}}
-\newcommand{\version}{{1.9}}
-\newcommand{\reldate}{{November 15, 2005}}
+\newcommand{\version}{{1.10}}
+\newcommand{\reldate}{{November, 2006}}
 \newcommand{\Ombold}{\mbox{\boldmath $\Omega$}}
 
 % enable index generation
