--- a/trunk/risoe-rep-title.tex
+++ b/trunk/risoe-rep-title.tex
@@ -46,7 +46,7 @@
  Neutron~Ray-Tracing~Package\\
  \MCS, Version \version\ }
 \author{Peter Willendrup, Emmanuel Farhi, Kim Lefmann,\\
-Klaus Lieutenant and Kristian Nielsen}
+Peter Christiansen and Klaus Lieutenant}
 
 \maketitle
 \endgroup
