--- a/trunk/risoe-rep_comp-title.tex
+++ b/trunk/risoe-rep_comp-title.tex
@@ -45,7 +45,7 @@
 \title{Component~Manual~for~\rlap{the}\\ % Avoid overfull message.
  Neutron~Ray-Tracing~Package\\
  \MCS, Version \version\ }
-\author{Kim Lefmann, Peter Kj\ae r Willendrup, Kristian Nielsen,
-Emmanuel Farhi, and Klaus Lieutenant}
+\author{Kim Lefmann, Peter Kj\ae r Willendrup,
+Emmanuel Farhi, Peter Christiansen and Klaus Lieutenant}
 \maketitle
 \endgroup
