Corrected un-escaped underscore in the install_docs plus removed doubly defined labels here and there
git-svn-id: https://svn.mccode.org/svn/McStasTeX@158 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/isotropic_sqw.tex
+++ b/trunk/isotropic_sqw.tex
@@ -174,15 +174,15 @@ Then a selection between energy gain and loss is done with the detailed balance 
 
 The next step is to check that conservation laws
 \begin{eqnarray}
-\hbar \omega &=& E_i - E_f = \frac{\hbar^2}{2m}(k_i^2 - k_f^2) \label{eq:w-transfer} \\
-\vec q &=& \vec k_i - \vec k_f \label{eq:q-transfer}
+\hbar \omega &=& E_i - E_f = \frac{\hbar^2}{2m}(k_i^2 - k_f^2) \label{eq:w-transfer_here} \\
+\vec q &=& \vec k_i - \vec k_f \label{eq:q-transfer_here}
 \end{eqnarray}
 can be satisfied. These conditions are closely related to the method for selecting the outgoing wave vector direction.
 
 When the final wave vector has to be computed, the quantities $\vec{k}_i$, $\hbar \omega$ and $q = |\vec{q}|$ are known.
-From the energy conservation law Eq. (\ref{eq:w-transfer}), we select randomly one of the two roots, $k_f^+$ and $k_f^-$.
+From the energy conservation law Eq. (\ref{eq:w-transfer_here}), we select randomly one of the two roots, $k_f^+$ and $k_f^-$.
 The scattered wave vector is noted : $\vec{k}_f = k_f \vec{\hat k}_s$ where $\vec{\hat k}_s$ is a unit vector.\\
-Since we only know the norm of the scattering vector $\vec{q}$, the momentum conservation law Eq. (\ref{eq:q-transfer}) may be expressed as
+Since we only know the norm of the scattering vector $\vec{q}$, the momentum conservation law Eq. (\ref{eq:q-transfer_here}) may be expressed as
 \begin{align} \label{eq:q2-transfer}
 q^2 = |\vec{k}_i -\vec{k}_f|^2 = |k_i^2| + |k_f^2| - 2 k_f \vec{k}_i \cdot \vec{\hat k}_s
 \end{align}
