--- a/trunk/kernel.tex
+++ b/trunk/kernel.tex
@@ -215,7 +215,7 @@ web-page~\cite{mcstas_webpage} and in the \texttt{example} directory.
 This marks the beginning of the definition. It also gives the name of
 the instrument and the list of instrument parameters. Instrument
 parameters describe the configuration of the instrument, and usually
-correspond to setting parameters of the components, see section \label{s:compdefs}. A motor position is
+correspond to setting parameters of the components, see section \ref{s:compdefs}. A motor position is
 a typical example of an instrument parameter. The input parameters of
 the instrument constitute the input that the user (or possibly a
 front-end program) must supply when the
