--- a/trunk/running.tex
+++ b/trunk/running.tex
@@ -386,7 +386,7 @@ probably be avoided when saving in binary format, see below).
 
 The complete list of options
 and arguments accepted by \MCS\ simulations appears in
-Table~\ref{f:simoptions}.
+Tables \ref{f:simoptions} and \ref{f:simoptions2}.
 
 \subsection{Choosing an output data file format}
 
@@ -537,7 +537,7 @@ When choosing the HTML format, the simulation results are saved as a web page, w
       \hline
     \end{tabular}
     \caption{Additional options accepted by \MCS\ simulations.}
-    \label{f:simoptions}
+    \label{f:simoptions2}
     }
   \end{center}
 \end{table}
