--- a/trunk/source_gen.tex
+++ b/trunk/source_gen.tex
@@ -12,7 +12,7 @@ The wavelength/energy range to emit is specified either using center and half wi
 The flux spectrum is specified with the same Maxwellian parameters as in component Source\_Maxwell\_3 (refer to section \ref{source-maxwell}).
 
 Maxwellian parameters for some continuous sources
-are given in Table~\ref{t:source-params}. As nobody knows exactly the characteristics of the sources (it is not easy to measure spectrum there), these figures should be used with caution.
+are given in Table~\ref{t:source_gen-params}. As nobody knows exactly the characteristics of the sources (it is not easy to measure spectrum there), these figures should be used with caution.
 
 \begin{table}
   \begin{center}
@@ -34,7 +34,7 @@ are given in Table~\ref{t:source-params}. As nobody knows exactly the characteri
              this correction factor is the beam current, $I_{\rm target}$,
              which is currently of the order 1.2~mA.
 }
-    \label{t:source-params}
+    \label{t:source_gen-params}
   }
   \end{center}
 \end{table}
