A couple of notes on validation
git-svn-id: https://svn.mccode.org/svn/McStasTeX@161 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/changes.tex
+++ b/trunk/changes.tex
@@ -116,6 +116,9 @@ Details about the installation and the available tools are given in chapter \ref
 The following features are planned for the oncoming releases of \MCS
 (not an ordered list):
 \begin{itemize}
+\item Increased validation and testing.
+\item Extend test cases to all (most) components. One instrument
+  pr. component. (Probably not in \verb+examples/+.
 \item Better support for heterogeneous grid computing.
 \item Improvements to the NeXus data format (initial support is
   already included).
