--- a/trunk/datablad.tex
+++ b/trunk/datablad.tex
@@ -57,7 +57,7 @@ Telefax +45 4677 4013
 \newpage\ifodd\csname c@page\endcsname\noindent\hbox{}\par\newpage\else\fi
 \begin{datablad}
 \titel{User and Programmers Guide to the Neutron Ray-Tracing Package
- \MCS , Version 1.9}
+ \MCS , Version \version}
 \forfatter{Peter Kj\ae r Willendrup, Emmanuel Farhi, Klaus Lieutenant, Kim Lefmann, and Kristian Nielsen}
 \isbn{ISBN 87--550--3481--0 (Internet)}\issn{0106--2840}
 \afdeling{Materials Research Department}
