Fresh ISBN and risoe-report numbers
git-svn-id: https://svn.mccode.org/svn/McStasTeX@163 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/Component_manual.tex
+++ b/trunk/Component_manual.tex
@@ -18,7 +18,7 @@
 \newcommand{\smallverbatimfile}[1]{{\footnotesize\verbatimfile{#1}}}
 \newcommand{\component}[5]{\begin{tabular}{|lp{0.7\textwidth}|}\hline {\bf Name:} & #1 \\ \hline {\bf Author:} & #2 \\ \hline {\bf Input parameters} & #3 \\ \hline {\bf Optional parameters} & #4 \\ \hline {\bf Notes} & #5 \\ \hline \end{tabular} \\ \noindent }
 
-\def\reportnum{Ris{\o}--R--1538(EN)}
+\def\reportnum{Ris{\o}--R--1538(rev.ed.)(EN)}
 
 %\oddsidemargin 0cm
 %\evensidemargin 0cm
