--- a/trunk/manual.tex
+++ b/trunk/manual.tex
@@ -20,7 +20,7 @@
 
 \newcommand{\smallverbatimfile}[1]{{\footnotesize\verbatimfile{#1}}}
 
-\def\reportnum{Ris{\o}--R--1416(EN)}
+\def\reportnum{Ris{\o}--R--1416(rev.ed.)(EN)}
 
 %\oddsidemargin 0cm
 %\evensidemargin 0cm
