--- a/trunk/abstract.tex
+++ b/trunk/abstract.tex
@@ -3,7 +3,7 @@ ray-tracing simulations of neutron scattering instruments with high
 complexity and precision. The simulations can compute all aspects of the
 performance of instruments and can thus be used to optimize the use of
 existing equipment, design new instrumentation, and carry out virtual
-experiments. McStas
+experiments for e.g. training, experimental planning or data analysis. McStas
 is based on a unique design where an automatic compilation process
 translates high-level textual instrument descriptions into efficient
 ANSI-C code. This design makes it simple to set up typical simulations
