--- a/trunk/intro.tex
+++ b/trunk/intro.tex
@@ -14,12 +14,11 @@ is a fast and versatile software tool for neutron ray-tracing simulations.
 It is based on a meta-language specially designed for neutron
 simulation. Specifications are written in this language by users and
 automatically translated into efficient simulation codes in ANSI-C.
-The present version supports both continuous and pulsed source instru-
-ments, and includes a library of standard
+The present version supports both continuous and pulsed source instruments, and includes a library of standard
 components with in total around 100 components. These enable to simulate all kinds of neutron scattering instruments (diffractometers, spectrometers, reflectometers, small-angle, back-scattering,...) for both continuous and pulsed sources.
 
-The \MCS\ package is written in ANSI-C and is freely available for down-load
-from the \MCS\ web-page~\cite{mcstas_webpage}. The package is actively
+The \MCS\ package is written in ANSI-C and is freely available for download
+from the \MCS\ website~\cite{mcstas_webpage}. The package is actively
 being developed and supported by Ris\o\ National Laboratory
 and the Institut Laue Langevin (ILL).
 The system is well tested and
@@ -27,7 +26,25 @@ is supplied with several examples and with an extensive documentation.
 Besides this manual, a separate component manual exists.
 
 
-\section{Historical background}
+\section{Development of Monte Carlo neutron simulation}
+The very early implementations of the method for neutron instruments used \emph{home-made} computer programs  (see e.g. papers by J.R.D. Copley, D.F.R. Mildner, J.M. Carpenter, J. Cook), more general packages have been designed, providing models for most parts of the simulations.
+These present existing packages are: NISP \cite{NISP}, ResTrax \cite{Restrax}, McStas \cite{nn_10_20,mcstas_pb,mcstas_webpage}, Vitess \cite{Vitess,vitess_webpage}, and IDEAS \cite{IDEAS}.
+Their usage usually covers all types of neutron spectrometers, most of the time through a user-friendly graphical interface, without requiring programming skills.
+
+The neutron ray-tracing Monte-Carlo method has been used widely for
+{\em e.g.}\ guide studies \cite{Copley93,Farhi02,Schanzer04},
+instrument optimization and design \cite{Zsigmond04,Lieutenant05}.
+Most of the time, the conclusions and general behaviour of such studies
+may be obtained using the classical analytical approaches,
+but accurate estimates for the flux, the resolutions,
+and generally the optimum parameter set, benefit advantageously from MC methods.
+
+Recently, the concept of virtual experiments, {\em i.e.}\ full simulations
+of a complete neutron experiment, has been suggested as the main
+goal for neutron ray-tracing simulations. The goal is that
+simulations should be of benefit to not only instrument builders, but also
+to users for training, experiment planning, diagnostics, and data
+analysis.
 
 In the late 90'ies at Ris\o\ National Laboratory,
 simulation tools were urgently needed,
@@ -63,13 +80,13 @@ methods, optimal configurations may be found.
 But achieving a satisfactory experiment on the best neutron
 spectrometer is not all. Once collected, the data analysis process
 raises some questions concerning the signal: what is the background
-signal ? What proportion of coherent and incoherent scattering has
-been measured ? Is is possible to identify clearly the purely elastic
+signal? What proportion of coherent and incoherent scattering has
+been measured? Is is possible to identify clearly the purely elastic
 (structure) contribution from the quasi-elastic and inelastic one
-(dynamics) ? What are the contributions from the sample geometry, the
-container, the sample environment, and generally the instrument itself
-? And last but not least, how does multiple scattering affect the
-signal ? Most of the time, the physicist will elude these questions
+(dynamics)? What are the contributions from the sample geometry, the
+container, the sample environment, and generally the instrument
+itself? And last but not least, how does multiple scattering affect the
+signal? Most of the time, the physicist will elude these questions
 using rough approximations, or applying analytical corrections
 \cite{Copley86}. Monte-Carlo techniques provide a mean to evaluate
 some of these quantities. The technicalities of Monte-Carlo simulation
@@ -199,7 +216,7 @@ minutes the instrument definition can be modified and a
 new simulation program generated. It also makes it simple to debug new
 components. A test instrument definition may be written
 containing a neutron source, the component to be tested, and whatever
-detectors are useful, and the component can be thoroughly tested before
+monitors are useful, and the component can be thoroughly tested before
 being used in a complex simulation with many different components.
 
 The \MCS\ system is based on ANSI-C, making it both efficient and
@@ -247,6 +264,10 @@ parts:
 %In addition, some results from
 %simulations with \MCS\ are described in
 %appendix~\ref{testresults}.
+As of this release of \MCS\, some support for simulating neutron
+polarisation is included. As this is the very first release with these
+features, functionality is likely to change. To reflect this, the
+documentation is currently only available in appendix~\ref{c:polarization}.
 A list of library calls that may be used in component definitions
 appears in appendix~\ref{c:kernelcalls}, and
 an explanation of the \MCS\ terminology can be
