--- a/trunk/mcstas.bib
+++ b/trunk/mcstas.bib
@@ -107,6 +107,11 @@
   note       = {See http://neutron-eu.net/en/}
 }
 
+@misc{ts2_webpage,
+  note       = {See http://ts-2.isis.rl.ac.uk/}
+}
+
+
 @article{Copley86,
    author    = {J. R. D. Copley and  P. Verkerk and A. A. van Well and H. Fredrikze},
    journal   = {Comput. Phys. Commun.},
