--- a/trunk/techniq.tex
+++ b/trunk/techniq.tex
@@ -55,24 +55,6 @@ Mathematically, the Monte-Carlo method is an application of the law of large num
 
 In the case were the $u_i$ values are regularly sampled, we come to the well known midpoint integration rule. In the case were the $u_i$ values are randomly (but regularly) sampled, this is the Monte-Carlo integration technique. As random generators are not perfect, we rather talk about \emph{quasi}-Monte-Carlo technique. We encourage the reader to refer to James \cite{James80} for a detailed review on the Monte-Carlo method.
 
-Although early implementations of the method for neutron instruments used \emph{home-made} computer programs  (see e.g. papers by J.R.D. Copley, D.F.R. Mildner, J.M. Carpenter, J. Cook), more general packages have been designed, providing models for most parts of the simulations.
-These present existing packages are: NISP \cite{NISP}, ResTrax \cite{Restrax}, McStas \cite{nn_10_20,mcstas_pb,mcstas_webpage}, Vitess \cite{Vitess,vitess_webpage}, and IDEAS \cite{IDEAS}.
-Their usage usually covers all types of neutron spectrometers, most of the time through a user-friendly graphical interface, without requiring programming skills.
-
-The neutron ray-tracing Monte-Carlo method has been used widely for
-{\em e.g.}\ guide studies \cite{Copley93,Farhi02,Schanzer04},
-instrument optimization and design \cite{Zsigmond04,Lieutenant05}.
-Most of the time, the conclusions and general behaviour of such studies
-may be obtained using the classical analytical approaches,
-but accurate estimates for the flux, the resolutions,
-and generally the optimum parameter set, benefit advantageously from MC methods.
-
-Recently, the concept of virtual experiments, {\em i.e.}\ full simulations
-of a complete neutron experiment, has been suggested as the main
-goal for neutron ray-tracing simulations. The goal is that
-simulations should be of benefit to not only instrument builders, but also
-to users for training, experiment planning, diagnostics, and data analysis.
-
 \section{The neutron weight}
 \label{s:probweight}
 A totally realistic semi-classical simulation will require that
@@ -87,7 +69,7 @@ a neutron "weight factor" for each simulated neutron ray and to
 adjust this weight according to the path of the ray.
 If {\em e.g.}\ the reflectivity of a certain
 optical component is 10\%, and only reflected neutrons ray are
-considered in the simulations, the neutron
+considered later in the simulations, the neutron
 weight will be multiplied by 0.10 when passing this component,
 but every neutron is allowed to reflect in the component.
 In contrast, the totally realistic simulation of the component
@@ -107,14 +89,16 @@ during the simulation.
 Simulation by weight adjustment is performed
 whenever possible. This includes
 \begin{itemize}
-\item Transmission through filters.
-\item Transmission through Soller blade collimator
+\item Transmission through filters and windows.
+\item Transmission through Soller blade collimators and velocity
+  selectors 
  (in the approximation
  which does not take each blade into account).
 \item Reflection from monochromator (and analyser) crystals
  with finite reflectivity and mosaicity.
+\item Reflection from guide walls.
 \item Passage of a continuous beam through a chopper.
-\item Scattering from samples.
+\item Scattering from all types of samples.
 \end{itemize}
 
 \subsection{Statistical errors of non-integer counts}
@@ -129,7 +113,7 @@ One may write the counting result as
 \label{psum}
 I = \sum_i p_i = N \overline{p} ,
 \end{equation}
-where $N$ is the number of neutrons in the detector and the vertical bar
+where $N$ is the number of rays hitting the detector and the vertical bar
 denote averaging.
 By performing the weight transformations, the (statistical)
 mean value of $I$ is unchanged. However, $N$ will in general be enhanced,
@@ -156,10 +140,10 @@ assuming that the two variables are independent:
 \begin{equation}
 \sigma^2(I) = \sigma^2(N) \overline{p}^2 + N^2 \sigma^2(\overline{p}) .
 \end{equation}
-Assuming that $N$ follows a normal distribution, we reach
+Assuming as before that $N$ follows a normal distribution, we reach
 $\sigma^2(N) \overline{p}^2 = N \overline{p}^2$.
 Further, assuming that the individual weights, $p_i$,
-follow a Gaussian distribution (which in many cases is far from the truth)
+follow a Gaussian distribution (which in some cases is far from the truth)
 we have
 $N^2 \sigma^2(\overline{p}) = \sigma^2(\sum_i p_i) = N \sigma^2(p_i)$
 and reach
@@ -181,7 +165,7 @@ As a consistency check, we note that for all $p_i$ equal, this reduces to
 eq.~(\ref{e:sigI1})
 
 In order to compute the intensities and uncertainties, the detector components
-in \MCS\ thus must keep track of
+in \MCS\ will keep track of
 $N=\sum_i p_i^0, I=\sum_i p_i^1$, and $M_2 = \sum_i p_i^2$.
 
 \section{Weight factor transformations during a Monte Carlo
@@ -194,10 +178,10 @@ of making this particular choice
 equals the actual physical properties we like to model.
 
 Let us follow up on the simple example of transmission.
-The probability of transmitting the real neutron is $T$, but we make
+The probability of transmitting the real neutron is $P$, but we make
 the Monte Carlo choice of transmitting the neutron ray each time:
 $f_{\rm MC}=1$. This must be reflected on the choice of weight multiplier
-$\pi_j$ gven by the master equation
+$\pi_j$ given by the master equation
 %In the ``real'' semi-classical world, there is a distribution
 %(probability density) for the neutrons in the six dimensional
 %(energy, direction, position) space of
@@ -248,7 +232,16 @@ $\pi_j = |\Delta \Ombold| / (4 \pi)$.
 One thus ensures that the mean simulated intensity is unchanged
 during a "correct" direction focusing, while a too narrow focusing will
 result in a lower (\textit{i.e.} wrong) intensity, since
-we cut neutrons rays that should have counted.
+we cut neutrons rays that should have reached the final detector.
+
+\begin{figure}[htb!]
+\begin{center}
+\includegraphics{figures/focusing}
+\end{center}
+\caption{An illustration of the effect of direction focusing in \MCS\ .}
+\label{fig:focusing}
+\end{figure}
+
 
 \section{Adaptive sampling}
 Another strategy to improve sampling in simulations
