Smaller figure, better caption...
git-svn-id: https://svn.mccode.org/svn/McStasTeX@165 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/techniq.tex
+++ b/trunk/techniq.tex
@@ -236,9 +236,11 @@ we cut neutrons rays that should have reached the final detector.
 
 \begin{figure}[htb!]
 \begin{center}
-\includegraphics{figures/focusing}
+\includegraphics[width=.8\textwidth]{figures/focusing}
 \end{center}
-\caption{An illustration of the effect of direction focusing in \MCS\ .}
+\caption{Illustration of the effect of direction focusing in \MCS\
+  . Weights of neutrons emitted into a certain solid angle are
+  scaled down by the full unit sphere area.}
 \label{fig:focusing}
 \end{figure}
 
