Just tested the new COPY with override of parms. Seems two sets of ()'s are needed on right hand side:
COMPONENT cp = COPY(org)(par1=1)

Adjusted manual to this syntax


git-svn-id: https://svn.mccode.org/svn/McStasTeX@167 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/kernel.tex
+++ b/trunk/kernel.tex
@@ -529,7 +529,7 @@ where {\it instance\_name} is the name of a preceeding component instance in the
 
 If you would like to change only some of the parameters in the instance copy, you may write, e.g.:
 \begin{quote}
-  \texttt{COMPONENT} name = \texttt{COPY} instance\_name (par1=0, par2=1)
+  \texttt{COMPONENT} name = \texttt{COPY}(instance\_name)(par1=0, par2=1)
 \end{quote}
 which will override the original instance parameter values. The EXTEND, GROUP, JUMP and WHEN keywords, if defined for the copied instance, will override the original setting.
 
