--- a/trunk/FermiChopper.tex
+++ b/trunk/FermiChopper.tex
@@ -1,6 +1,6 @@
 \section{FermiChopper: The Fermi-chopper}
 
-\component{FermiChopper}{M. Poehlmann, C. Carbogno, H. Schober, E. Farhi}{$R,y_{min} y_{max}, \nu,w,length$,Nslit,phase}{$m,Q_c,R_0,\alpha, W, R_{slit}$,zero\_time}{validated}
+\component{FermiChopper}{M. Poehlmann, C. Carbogno, H. Schober, E. Farhi}{$R,y_{min} y_{max}, \nu,w,length$,Nslit,phase}{$m,Q_c,R_0,\alpha, W$,curvature,zero\_time}{validated}
 \index{Optics!Fermi Chopper|textbf}
 
 \begin{figure}
@@ -23,7 +23,7 @@ In this implementation, the slits are straight, but may be coated with super-mir
 
 The angular speed of the chopper is $\omega = 2\pi \nu$, where $\nu$ is the rotation frequency. The angle $phase$ for which the chopper is in the 'open' state for most of the neutrons coming in (z' axis of the rotating frame parallel to the z axis of the static frame) is also an input parameter. The time window may optionally be shifted to zero when setting the \verb+zero_time=1+ option.
 
-The curvature of the slit channels is specified with the $R_{slit}$ parameter. Positive sign indicates that the deviation 'bump' due to curvature is in the $x'$ positive side, and the center of curvature is in the $x'$ negative side.
+The curvature of the slit channels is specified with the {\it curvature} parameter. Positive sign indicates that the deviation 'bump' due to curvature is in the $x'$ positive side, and the center of curvature is in the $x'$ negative side. The optimal radius of curvature $R$ is related to frequency $\nu$ and neutron velocity $v$ with: $v=4 \pi R \nu$.
 
 The component was validated extensivelly by K. Lieutenant. As an alternative, one may use the {\bf Vitess\_ChopperFermi} component (eventhough slower and without super-mirror support).
 
