--- a/trunk/changes.tex
+++ b/trunk/changes.tex
@@ -14,9 +14,9 @@ Of course, we can not garranty that the software is bullet proof, but we do our 
   support for polarisation. Peter Christiansen who worked at Ris\o\
   March-October 2006 was the main workforce behind this new
   functionality, backed by funding from ISIS, work by Rob Dalgliesh at
-  ISIS plus functionality of the VitESS and NSIP packages. As this is
+  ISIS plus inspiration from the VitESS and NISP packages. As this is
   the first release with polarisation support, the methods and
-  algorithms implemented are probably not the final solution. Hence,
+  algorithms implemented will certainly bed developed further. Hence,
   documentation of the functionality has been placed in Appendix
   \ref{c:polarization} to this manual. Polarisation users: Please give
   us feedback for further development! Items marked by {\bf(p)} below
